refactor: correct formatting

--- a/frontend/assets/translations/it.json
+++ b/frontend/assets/translations/it.json
@@ -181,7 +181,7 @@
                 "pageIndex": "Indice delle Pagine",
                 "component": "Componente",
                 "addHandler": "+ Aggiungi handler",
-                "addEventHandler": "Aggiungi handler eventi",
+                "addEventHandler": "+ Aggiungi handler eventi",
                 "emptyMessage": "Questo {{componentName}} non ha handler eventi"
             }
         }
